Fix province history not always right